Modify users and auth and add Password Service and sepeare exception

--- a/ExpenseTracker.csproj
+++ b/ExpenseTracker.csproj
@@ -5,6 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>436a78a2-6c30-4637-86aa-e0d2224b9580</UserSecretsId>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Helpers\**" />
+    <Content Remove="Helpers\**" />
+    <EmbeddedResource Remove="Helpers\**" />
+    <None Remove="Helpers\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
